turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:17: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	var k : Color = PosCouleur(getCouleurSol(),colors) 
                                  ^LangtonsAnt:19: error: type mismatch;
 found   : String("R")
 required: Array[Char]
		case "R"	=> setCouleurSol(k);droite();avance()
                     ^LangtonsAnt:20: error: type mismatch;
 found   : String("L")
 required: Array[Char]
		case "L" =>  setCouleurSol(k);gauche();avance()
                     ^